# TheAdventure2019

./: .gitignore  .gitignore.orig  .gitlab-ci.yml  CMakeLists.txt  CMakeLists_BACKUP_15817.txt  CMakeLists_BASE_15817.txt  CMakeLists_LOCAL_15817.txt  CONTRIBUTING.md  README.md  server.sh  test.txt
lib/: CMakeLists.txt  CMakeLists.txt.orig
lib/User/: CMakeLists.txt
lib/User/include/: User.h
lib/User/src/: User.cpp
lib/accountManager/: CMakeLists.txt  users.json
lib/accountManager/include/: AccountManager.h  User.h
lib/accountManager/src/: AccountManager.cpp  User.cpp
lib/accountmanager/: CMakeLists.txt
lib/accountmanager/include/: AccountManager.h  User.h
lib/accountmanager/src/: AccountManager.cpp  User.cpp
lib/accounts/: CMakeLists.txt
lib/accounts/include/: AccountManager.h
lib/accounts/src/: AccountManager.cpp  User.cpp
lib/authentication/: CMakeLists.txt  Makefile  cmake_install.cmake
lib/authentication/include/: Auth.h  Authentication.cpp  Authentication.h  AuthenticationLibrary.pch  AuthenticationPrefixHeader.pch  Authenticator.h  Identifier.h  Identity.h  UUID.h  auth.hpp
lib/authentication/src/: Authentication.cpp  Authenticator.cpp  Identity.cpp  UUID.cpp
lib/builder/: CMakeLists.txt  Makefile  cmake_install.cmake
lib/builder/include/: Builder.h  BuilderConfiguration.h  BuilderLibrary.pch  BuilderPrefixHeader.pch  ItemBuilder.h
lib/builder/src/: Builder.cpp  ItemBuilder.cpp
lib/character/: CMakeLists.txt
lib/character/include/: Attributes.h  NonPlayerControlledCharacter.h
lib/character/src/: Character.cpp
lib/characterDB/: CMakeLists.txt  Makefile  cmake_install.cmake  moved.txt
lib/characterDB/include/: Avatar.h  Character.h  CharacterDB.h  CharacterManager.h  CharacterMode.h  Clothing.h  Equipment.h  NPC.h
lib/characterDB/src/: Character.cpp  CharacterDB.cpp  CharacterManager.cpp
lib/characters/: CMakeLists.txt  CMakeLists.txt.orig
lib/characters/include/: Attributes.h  Attributes.h.orig  Avatar.h  AvatarManager.h  Character.h  CharacterDB.h  CharacterManager.h  CharacterMode.h  Clothing.h  Equipment.h  Inventory.h
lib/characters/src/: Attributes.cpp  Attributes.cpp.orig  Avatar.cpp  AvatarManager.cpp  Character.cpp  CharacterManager.cpp  Inventory.cpp  NPC.cpp  NonPlayerControlledCharacter.cpp  PlayerControlledCharacter.cpp
lib/combat/: CMakeLists.txt  Makefile  cmake_install.cmake
lib/combat/include/: Combat.h  CombatManager.h  Match.h
lib/combat/src/: Combat.cpp  CombatManager.cpp  Match.cpp
lib/commands/: CMakeLists.txt  Makefile  cmake_install.cmake
lib/commands/include/: Command.h  CommandAddToActionQueue.h  CommandAdmin.h  CommandAttack.h  CommandCast.h  CommandCombat.h  CommandCreate.h  CommandCreateAva.h  CommandCreateItem.h  CommandCreateRoom.h  CommandDefinitions.h  CommandDeleteRoom.h  CommandDrop.h  CommandEditAva.h  CommandEditRoom.h  CommandEquip.h  CommandExamine.h  CommandFlee.h  CommandHelp.h  CommandLogin.h  CommandLogout.h  CommandLook.h  CommandMinigame.h  CommandMove.h  CommandParser.h  CommandPickup.h  CommandPut.h  CommandSay.h  CommandTake.h  CommandTell.h  CommandUse.h  CommandYell.h  Environment.pch  Functor.h  Parser.h
lib/commands/src/: Command.cpp  CommandAdmin.cpp  CommandAttack.cpp  CommandCast.cpp  CommandCombat.cpp  CommandCreate.cpp  CommandCreateAva.cpp  CommandCreateItem.cpp  CommandCreateRoom.cpp  CommandDefinitions.cpp  CommandDeleteRoom.cpp  CommandDrop.cpp  CommandEditAva.cpp  CommandEditRoom.cpp  (+20 more)
lib/config/: CMakeLists.txt  Makefile  cmake_install.cmake
lib/data/: CMakeLists.txt
lib/debugtools/: CMakeLists.txt
lib/environment/: CMakeLists.txt  Makefile  cmake_install.cmake
lib/exceptions/: CMakeLists.txt
lib/game/: CMakeLists.txt  CMakeLists.txt.orig  Makefile  cmake_install.cmake
lib/gamelogic/: CMakeLists.txt  GameManager.cpp  GameManager.h
lib/item/: CMakeLists.txt  Makefile  cmake_install.cmake
lib/location/: CMakeLists.txt  Makefile  cmake_install.cmake
lib/logging/: CMakeLists.txt
lib/minigame/: CMakeLists.txt  CMakeLists.txt.orig  Makefile  cmake_install.cmake
lib/network/: CMakeLists.txt  Makefile  README.md  cmake_install.cmake
lib/networking/: CMakeLists.txt
lib/object/: CMakeLists.txt  Makefile  cmake_install.cmake
lib/objects/: CMakeLists.txt
lib/old_userdb/: CMakeLists.txt
lib/parser/: CMakeLists.txt
lib/parsers/: CMakeLists.txt  Makefile  cmake_install.cmake
lib/print/: CMakeLists.txt  Makefile  cmake_install.cmake
lib/properties/: CMakeLists.txt
lib/scripts/: CMakeLists.txt
lib/simple/: CMakeLists.txt
lib/strings/: CMakeLists.txt  Makefile  cmake_install.cmake
lib/test/: AwardsTests.cpp  CMakeLists.txt  ItemControllerTests.cpp  KeywordsTests.cpp  TriangleTests.cpp
lib/time/: CMakeLists.txt  Makefile  cmake_install.cmake
lib/tools/: CMakeLists.txt
lib/traits/: CMakeLists.txt  Makefile  cmake_install.cmake
lib/types/: CMakeLists.txt
lib/user-interface/: CMakeLists.txt  Makefile  cmake_install.cmake
lib/userdb/: CMakeLists.txt  Makefile  cmake_install.cmake
lib/usermanager/: CMakeLists.txt
lib/userprofile/: CMakeLists.txt
lib/users/: CMakeLists.txt
lib/utility/: CMakeLists.txt
lib/world/: CMakeLists.txt
test/: AttributesTest.cpp  AwardsTests.cpp  CMakeLists.txt  CMakeLists.txt.orig  CharacterTest.cpp  CollectionTests.cpp  CommandSplittingTest.cpp  CommandTest.cpp  CommandValidTest.cpp  CommandsTest.cpp  DescriptionTests.cpp  Dummy.cpp  GameWorksTest.cpp  HailstoneTests.cpp  InventoryTests.cpp  ItemBuilderTests.cpp  ItemConstructorTests.cpp  ItemControllerTests.cpp  ItemTests.cpp  KeywordsTests.cpp  TestChessBoard.cpp  TestRunner.cpp  TestRunner.cpp.orig  cmake_install.cmake  testBoard.cpp  testChessBoard.cpp  tests.cpp
test/lib/: CTestTestfile.cmake  Makefile  cmake_install.cmake
test/mocks/: WorldManagerMock.cpp
tools/: CMakeLists.txt
tools/chatclient/: CMakeLists.txt  ChatWindow.cpp  chatclient.cpp
tools/chatserver/: CMakeLists.txt  chatserver.cpp
tools/cmd/: CMakeLists.txt  cmd.cpp
tools/liteserver/: CMakeLists.txt  liteserver.cpp
tools/schemes/: CMakeLists.txt
(+426 files in other folders)
