#
#   lib CMakeLists
#


# Add subdirectories in alphabetical order

# add_subdirectory(${authentication})
# add_subdirectory(${builder})
# add_subdirectory(${characters})
# add_subdirectory(${combat})
# add_subdirectory(${commands})
# add_subdirectory(${environment})
# add_subdirectory(${exceptions})
# add_subdirectory(${game})
# add_subdirectory(${item})
# add_subdirectory(${minigame})
# add_subdirectory(${network})
# add_subdirectory(${object})
# add_subdirectory(${parsers})
# add_subdirectory(${print})
# add_subdirectory(${time})
# add_subdirectory(${traits})
# add_subdirectory(${user-interface})
# add_subdirectory(${users})
# add_subdirectory(${world})










# Moved
#   add_subdirectory(${libcharactersdb})
#   add_subdirectory(${libuserdb})
